--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,11 @@
-<%= @user.name %>, <%= @user.email %>
-<div>Created at: <%= in_tz(@user.created_at) %></div>
-<div>Updated at: <%= in_tz(@user.updated_at) %></div>
-<div>Time now: <%= in_tz(Time.now) %></div>
+<% provide(:title, @user.name) %>
+<div class="row">
+  <aside class="col-md-4">
+    <section class="user_info">
+      <h1>
+        <%= gravatar_for @user %>
+        <%= @user.name %>
+      </h1>
+    </section>
+  </aside>
+</div>
