--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -20,5 +20,7 @@
 
       <%= f.submit "Create my account", class: "btn btn-primary" %>
     <% end %>
+
+    <p>Existing user? <%= link_to "Login in", login_path %></p>
   </div>
 </div>
